--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
       };
     
       firebase.initializeApp(firebaseConfig);
-
     </script>
 
 </head>
+
 <body>
     <div class="container">
       <nav class="navbar navbar-dark bg-dark">
           <span class="navbar-brand" id="username">WEB CHAT</span>
           <div id="buttons">
       </nav>
+
+      <main id="contentProtected"></main>
+
     </div>
     <script src="app.js"></script>
-    </body>
+</body>
 </html>
