--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
 
       <main id="contentProtected"></main>
 
+        <div class="d-flex justify-content-end">
+          <span class="badge badge-pill badge-primary">User Message</span>
+        </div>
+
+        
+        <div class="d-flex justify-content-start">
+          <span class="badge badge-pill badge-secondary">User Message</span>
+        </div>
+
+      <form id="form">
+        <input type="text" class="form-control" placeholder="Send Message" id="inputChat">
+        <div class="input-group-append">
+          <button class="btn btn-primary" type="submit">Send</button>
+        </div>
+      </form>
+
     </div>
     <script src="app.js"></script>
 </body>
