--- a/index.html
+++ b/index.html
@@ -37,16 +37,8 @@
           <div id="buttons">
       </nav>
 
-      <main id="contentProtected"></main>
+      <main id="contentProtected" class="mt-2" style="height: 78vh; overflow-y: scroll;"></main>
 
-        <div class="d-flex justify-content-end">
-          <span class="badge badge-pill badge-primary">User Message</span>
-        </div>
-
-        
-        <div class="d-flex justify-content-start">
-          <span class="badge badge-pill badge-secondary">User Message</span>
-        </div>
 
       <form id="form">
         <input type="text" class="form-control" placeholder="Send Message" id="inputChat">
