--- a/WebProyectoChat/index.html
+++ b/WebProyectoChat/index.html
@@ -1,29 +1,32 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
     <title>WEB CHAT</title>
 
       <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
       <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
       <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+
 
       <script type="module">
 
       var firebaseConfig = {
-        apiKey: "AIzaSyDM03RVslFmJb_lb_Ng-Ds7iiAzEYoSfI8",
-        authDomain: "webproyecto-54092.firebaseapp.com",
-        projectId: "webproyecto-54092",
-        storageBucket: "webproyecto-54092.appspot.com",
-        messagingSenderId: "486030175441",
-        appId: "1:486030175441:web:ece840661ee13c4b71a9f0"
-      };
+          apiKey: "AIzaSyCHwpjLLdZIOMkp4n7g9X4xrl8O1O8r1T8",
+          authDomain: "webchat-c0abb.firebaseapp.com",
+          projectId: "webchat-c0abb",
+          storageBucket: "webchat-c0abb.appspot.com",
+          messagingSenderId: "134709577986",
+          appId: "1:134709577986:web:8781bd31083de484c79a1b"
+        };
     
       firebase.initializeApp(firebaseConfig);
     </script>
