--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <script type="module">
 
       var firebaseConfig = {
-          apiKey: "AIzaSyCHwpjLLdZIOMkp4n7g9X4xrl8O1O8r1T8",
-          authDomain: "webchat-c0abb.firebaseapp.com",
-          projectId: "webchat-c0abb",
-          storageBucket: "webchat-c0abb.appspot.com",
-          messagingSenderId: "134709577986",
-          appId: "1:134709577986:web:8781bd31083de484c79a1b"
-        };
+        apiKey: "AIzaSyDmujIj7MydyVCokYDKBaAcYxjWVOH2d_4",
+        authDomain: "webchat-98bef.firebaseapp.com",
+        projectId: "webchat-98bef",
+        storageBucket: "webchat-98bef.appspot.com",
+        messagingSenderId: "416398881985",
+        appId: "1:416398881985:web:a4558a7820acf0a2365040"
+      };
     
       firebase.initializeApp(firebaseConfig);
     </script>
